Disable window rounded corner animations
For graphics performance reasons

Bug: 122347746
Test: visual; swipe up on overview
Change-Id: Iadc765aa72e2777f5307659a6138e9dcef1a9659
Signed-off-by: Melvin <kartik3163@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -511,4 +511,7 @@
 
     <!-- Enable all rotations -->
     <bool name="config_allowAllRotations">true</bool>
+
+    <!-- Disable rounded corners on windows to improve graphics performance -->
+    <bool name="config_supportsRoundedCornersOnWindows">false</bool>
 </resources>
