verlay: enable all rotations
Change-Id: Iae8253cbec97560522e7cec2fd0eedb13f08e005
Signed-off-by: Anierin Bliss <anierin.t.bliss@gmail.com>
Signed-off-by: Melvin <kartik3163@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -496,4 +496,7 @@
 
     <!-- Boolean indicating if current platform supports HFP inband ringing -->
     <bool name="config_bluetooth_hfp_inband_ringing_support">true</bool>
+
+    <!-- Enable all rotations -->
+    <bool name="config_allowAllRotations">true</bool>
 </resources>
